--- a/models/card.txt.tmpl
+++ b/models/card.txt.tmpl
@@ -1,5 +1,6 @@
 ID = {{ .ID }}
 Version = {{ .Version }}
+Deck = {{ .Deck }}
 LastReview = {{ .LastReview }}
 NextReview = {{ .NextReview }}
 Active = {{ .Active }}
